# event-outbox

./: .gitignore  README.md  cleanup.sh  pyproject.toml
docs/ru-RU/: README.md  dependency-inversion.md  integration.md  motivation.md
environment/: docker-compose.yml
event_outbox/: __init__.py  outbox.py  transport.py
tests/: config.toml  conftest.py  test_outbox.py  test_transport.py
